# creditrisk-api-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  main.rs
.cargo/: audit.toml
.github/hooks/: pre-commit
.github/workflows/: ci.yml  rust.yml
models/: logistic_regression.rs  mod.rs
routes/: logistic_regression_route.rs  mod.rs
src/: lib.rs
src/models/: logistic_regression.rs  mod.rs
src/routes/: health_check_route.rs  logistic_regression_route.rs  mod.rs
tests/models/: logistic_regression_test.rs  mod.rs
