[package]
name = "creditrisk-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
hyper = "1.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
thiserror = "1.0.56"
approx = "=0.5.1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "rust-project"
path = "main.rs"

[lib]
name = "creditrisk_api_rs"
path = "src/lib.rs"

[alias]
check-fmt = "fmt --all -- --check"
fix-fmt = "fmt --all"
